# GPP

./: .gitignore  Labs.sln  README.md
IOC/: CMakeLists.txt  Car.h  IOC.h  IOC.vcxproj  IOC.vcxproj.filters  main.cpp
Lab1/: CMakeLists.txt  Display.h  File.cpp  Lab1.sln  Lab1.vcxproj  main.cpp
Lab1/Lab1/: Display.cpp  Display.h  File.cpp  File.h  FileMonitor.cpp  FileMonitor.h  Lab1.vcxproj  Lab1.vcxproj.filters  main.cpp
Lab2/: CMakeLists.txt  CPP.cpp  CPP.h  CSharp.cpp  CSharp.h  Factory.h  Java.cpp  Java.h  Lab2.vcxproj  Lab2.vcxproj.filters  Unit.h  Utils.cpp  Utils.h  main.cpp
Lab3/: CMakeLists.txt  ChartData.cpp  ChartData.h  ChartsView.cpp  ChartsView.h  FilesView.cpp  FilesView.h  IoC.cpp  IoC.h  Lab3.vcxproj  Lab3.vcxproj.filters  MainWindow.cpp  MainWindow.h  Reader.cpp  Reader.h  main.cpp
Widget_Counter/: CMakeLists.txt  Widget_Counter.cpp  Widget_Counter.h  Widget_Counter.vcxproj  Widget_Counter.vcxproj.filters  main.cpp
Widget_Drawer/: Area.cpp  Area.h  CMakeLists.txt  Figura.cpp  Figura.h  Widget_Drawer.cpp  Widget_Drawer.h  Widget_Drawer.qrc  Widget_Drawer.ui  Widget_Drawer.vcxproj  Widget_Drawer.vcxproj.filters  main.cpp
Widget_Square/: CMakeLists.txt  Widget_Square.cpp  Widget_Square.h  Widget_Square.vcxproj  Widget_Square.vcxproj.filters  main.cpp
